--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kopikatshop",
   "version": "0.1.0",
-  "proxy": "https://kopikatbackend.herokuapp.com/",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
